--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -9,9 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Unity - Request Activation File
+      id: getManualLicenseFile
       uses: webbertakken/unity-request-activation-file@v1.2
       with:
         unityVersion: 2019.4.8f1
+
     - name: Expose as artifact
       uses: actions/upload-artifact@v2
       with:
