--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,14 @@ jobs:
           lfs: true
 
       # Cache
-      - uses: actions/cache@v2.1.1
+      - uses: actions/cache@v2.1.2
         with:
-          path: Mango/Library
+          path: Library
           key: Library
 
       # Build
       - name: Build project
-        uses: webbertakken/unity-builder@v1.4
+        uses: webbertakken/unity-builder@v1.3
         with:
           unityVersion: 2019.4.8f1
           targetPlatform: WebGL
