--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.new_tag }}
           release_name: Release ${{ steps.tag.outputs.new_tag }}
-          body_path: git.log
+          body: ${{ steps.tag.outputs.changelog }}
           draft: true
           prerelease: true
 
@@ -59,7 +59,7 @@ jobs:
       # Cache
       - uses: actions/cache@v2.1.2
         with:
-          path: Library
+          path: Mango/Library
           key: Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}
           restore-keys: |
             Library-${{ matrix.projectPath }}-
@@ -79,7 +79,7 @@ jobs:
       # Output
       - uses: actions/upload-artifact@v2
         with:
-          name: Earth2099-${{ matrix.targetPlatform }}
+          name: Earth2099-${{ matrix.targetPlatform }}.tar
           path: Earth2099-${{ matrix.targetPlatform}}.tar
 
       # Release
@@ -92,7 +92,7 @@ jobs:
         with:
           upload_url: ${{ needs.createRelease.outputs.upload_url }}
           asset_path: Earth2099-${{ matrix.targetPlatform}}.tar
-          asset_name: Earth2099-${{ matrix.targetPlatform}}
+          asset_name: Earth2099-${{ matrix.targetPlatform}}.tar
           asset_content_type: application/tar
 
       #- name: Deploy 🚀
