--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,7 @@ jobs:
 
       # Output
       - uses: actions/upload-artifact@v2
+        if: ${{ matrix.targetPlatform != 'WebGL' }}
         with:
           name: Earth2099-${{ matrix.targetPlatform }}-${{ needs.createRelease.outputs.latest_tag }}
           path: Earth2099-${{ matrix.targetPlatform }}-${{ needs.createRelease.outputs.latest_tag }}.tar.gz
@@ -97,12 +98,12 @@ jobs:
           asset_path: Earth2099-${{ matrix.targetPlatform }}-${{ needs.createRelease.outputs.latest_tag }}.tar.gz
           asset_name: Earth2099-${{ matrix.targetPlatform }}-${{ needs.createRelease.outputs.latest_tag }}.tar.gz
           asset_content_type: application/x-tar
-
+      - run: ls -lR
       - name: Deploy 🚀
         if: ${{ matrix.targetPlatform == 'WebGL' }}
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build/WebGL/WebGL # The folder the action should deploy.
+          FOLDER: build/WebGL/Earth2099 # The folder the action should deploy.
           CLEAN: true # Automatically remove deleted files from the deploy branch
