--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Integracion Continua 😎
 
 on:
-  push: { branches: [develop, master, ci] }
+  push: { branches: [master, ci] }
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
