--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v4.6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: ci
+          release_branches: master
       - run: git log $(git describe --tags --abbrev=0)..HEAD --no-merges --oneline > git.log
       - name: Create Release
         id: create_release
